# trunk8

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  run.py
.github/: CODEOWNERS  WORKFLOWS.md  dependabot.yml
.github/workflows/: docker.yml  docs.yml  release.yml  tests.yml
app/: __init__.py
app/auth/: __init__.py  decorators.py  routes.py
app/backup/: __init__.py  routes.py
app/links/: __init__.py  models.py  routes.py  utils.py
app/main/: __init__.py  routes.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: add_link.html  backup_create.html  backup_restore.html  base.html  edit_link.html  html_render.html  index.html  link_created.html  link_not_found.html  list_links.html  login.html  markdown_render.html  profile.html  register.html  settings.html  user_detail.html  users.html
app/utils/: __init__.py  config_loader.py  logging_config.py  user_manager.py  version.py
config/: config.toml  themes.toml
debug/: debug_config.py  debug_routes.py
docs/: github-pages-setup.md  index.md
docs/api/: app.md  auth.md  backup.md  links.md  main.md  overview.md  utils.md
docs/configuration/: app-config.md  environment.md  links-config.md  overview.md  themes-config.md  user-config.md
docs/deployment/: backup.md  performance.md  production.md  security.md
docs/development/: architecture.md  contributing.md  project-structure.md  setup.md  testing.md
docs/getting-started/: docker.md  installation.md  quickstart.md
docs/reference/: changelog.md  faq.md  license.md
docs/user-guide/: authentication.md  backup-restore.md  link-types.md  managing-links.md  managing-users.md  overview.md  settings.md  themes.md
scripts/: install-lightsail.sh  install-raspberrypi.sh
tests/: TESTS.md  __init__.py  conftest.py  test_admin_password_security.py  test_auth.py  test_backup.py  test_config_loader.py  test_integration.py  test_links.py  test_links_utils.py  test_main.py  test_models.py  test_user_deletion.py
users/admin/: links.toml
users/admin/assets/: example.md  example.txt
