[project]
name = "trunk8"
version = "0.6.1"
description = "Trunk8 link shortener and file host system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "toml>=0.10.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "flake8>=7.3.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "flake8>=7.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.auth", "app.links", "app.main", "app.utils"]
