[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "trunk8"
version = "0.7.0"
description = "Trunk8 link shortener and file host system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=25.1.0",
    "toml>=0.10.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
]
dev = [
    {include-group = "test"},
    {include-group = "docs"},
    "ruff>=0.15.1",
    "ty>=0.0.17",
    "rumdl>=0.1.21",
]

[tool.uv]
default-groups = ["dev"]

# ——— Ruff: lint and format (replaces black, isort, flake8) ———
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/auth/decorators.py" = ["UP047"]
"debug/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ——— ty: type checking (replaces mypy, pyright) ———
[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["tests"]

# ——— rumdl: markdown format (mkdocs flavor) ———
# Global options live under [tool.rumdl]; [tool.rumdl.global] is for .rumdl.toml only.
[tool.rumdl]
flavor = "mkdocs"
respect-gitignore = true
disable = ["MD007", "MD013", "MD031", "MD033", "MD046"]
exclude = [".git", ".github", "node_modules", "vendor", "dist", "build", "CHANGELOG.md", "LICENSE.md"]
